TOOL-245 - Menu overlap issues

--- a/src/AppBundle/Resources/assets/css/sass/components/_header.scss
+++ b/src/AppBundle/Resources/assets/css/sass/components/_header.scss
@@ -7,6 +7,7 @@
 .header {
   position: relative;
   display: block;
+  z-index: auto;
 
   .page-title {
     position: relative;
